--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "deep-chat-react": "^2.1.1",
     "lucide-react": "^0.475.0",
+    "nanoid": "^5.1.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
