--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-spinners": "^0.17.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
