--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "biome check ."
@@ -20,7 +20,7 @@
     "deep-chat-react": "^2.1.1",
     "lucide-react": "^0.482.0",
     "nanoid": "^5.1.0",
-    "next": "15.3.6",
+    "next": "16.0.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -37,6 +37,6 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^4.0.14",
-    "typescript": "^5"
+    "typescript": "^5.4.0"
   }
 }
